i made some change in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <a href="#about" class="nav-link">About</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#projects" class="nav-link">Projects</a>
-                <a href="#experience" class="nav-link">Journey</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -47,8 +46,7 @@
                     </h1>
                     <h2 class="hero-subtitle">Aspiring Java Fullstack Developer</h2>
                     <p class="hero-description">
-                        Java Fullstack — Java, Spring Boot,
-                        REST APIs, React, SQL and Git. 
+                        Developer — Java, Html, Css, Git & GitHub. 
                     </p>
                     <div class="hero-buttons">
                         <button class="btn btn-primary" onclick="scrollToSection('projects')">
@@ -69,16 +67,12 @@
                                 <span>Java</span>
                             </div>
                             <div class="tech-item">
-                                <i class="fab fa-spring"></i>
-                                <span>Spring</span>
+                                <i class="fab fa-Html"></i>
+                                <span>Html</span>
                             </div>
                             <div class="tech-item">
-                                <i class="fab fa-react"></i>
-                                <span>React</span>
-                            </div>
-                            <div class="tech-item">
-                                <i class="fab fa-docker"></i>
-                                <span>Docker</span>
+                                <i class="fab fa-Css"></i>
+                                <span>Css</span>
                             </div>
                         </div>
                     </div>
@@ -105,7 +99,7 @@
                             <div class="skill-info">
                                 <span>Learning Path</span>
                             </div>
-                            <p class="project-description">Focused on Java Fullstack: Java, Spring Boot, REST APIs, React, SQL, Git/GitHub and deployment basics.</p>
+                            <p class="project-description">Focused on Learning Java, Spring Boot, REST APIs, React, SQL, Git/GitHub and deployment basics.</p>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
@@ -149,8 +143,8 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-description">
-                        I'm a student from India, on a journey to become a Java
-                        Fullstack Developer. I learn by building and breaking down problems into simple steps.
+                        I'm on a journey to become a
+                        Developer. I learn by building and breaking down problems into simple steps.
                     </p>
                     <p class="about-description">
                         My current focus areas are Java, Spring Boot, REST APIs, React, SQL and Git/GitHub.
@@ -178,7 +172,7 @@
                         </div>
                         <div class="profile-info">
                             <h3>Sunil Ghorpade</h3>
-                            <p>Java Fullstack Developer</p>
+                            <p>Fullstack Developer</p>
                             <div class="social-links">
                                 <a href="https://github.com/SUN17GH" target="_blank" class="social-link">
                                     <i class="fab fa-github"></i>
@@ -200,7 +194,7 @@
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
-            <h2 class="section-title">Technical Skills</h2>
+            <h2 class="section-title">Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
                     <h3 class="category-title">
@@ -211,37 +205,37 @@
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>Java 8/11/17</span>
-                                <span>95%</span>
+                                <span>25%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 95%"></div>
+                                <div class="skill-progress" style="width: 25%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>Spring Framework</span>
-                                <span>90%</span>
+                                <span>1%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 90%"></div>
+                                <div class="skill-progress" style="width: 1%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>Spring Boot</span>
-                                <span>88%</span>
+                                <span>1%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 88%"></div>
+                                <div class="skill-progress" style="width: 1%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>Microservices</span>
-                                <span>85%</span>
+                                <span>1%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 85%"></div>
+                                <div class="skill-progress" style="width: 1%"></div>
                             </div>
                         </div>
                     </div>
@@ -256,37 +250,37 @@
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>React.js</span>
-                                <span>80%</span>
+                                <span>25%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 80%"></div>
+                                <div class="skill-progress" style="width: 25%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>HTML5/CSS3</span>
-                                <span>90%</span>
+                                <span>60%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 90%"></div>
+                                <div class="skill-progress" style="width: 60%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>JavaScript</span>
-                                <span>85%</span>
+                                <span>25%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 85%"></div>
+                                <div class="skill-progress" style="width: 25%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>TypeScript</span>
-                                <span>75%</span>
+                                <span>20%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 75%"></div>
+                                <div class="skill-progress" style="width: 20%"></div>
                             </div>
                         </div>
                     </div>
@@ -301,37 +295,37 @@
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>MySQL/PostgreSQL</span>
-                                <span>88%</span>
+                                <span>10%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 88%"></div>
+                                <div class="skill-progress" style="width: 10%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>MongoDB</span>
-                                <span>80%</span>
+                                <span>1%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 80%"></div>
+                                <div class="skill-progress" style="width: 1%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>Docker</span>
-                                <span>82%</span>
+                                <span>1%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 82%"></div>
+                                <div class="skill-progress" style="width: 1%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span>Git/GitHub</span>
-                                <span>90%</span>
+                                <span>50%</span>
                             </div>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 90%"></div>
+                                <div class="skill-progress" style="width: 50%"></div>
                             </div>
                         </div>
                     </div>
@@ -444,75 +438,6 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
-    <section id="experience" class="experience">
-        <div class="container">
-            <h2 class="section-title">Journey</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3 class="timeline-title">Started Learning Java</h3>
-                            <span class="timeline-company">Self-Learning</span>
-                            <span class="timeline-period">2023</span>
-                        </div>
-                        <p class="timeline-description">
-                            Began with Java basics, OOP, collections, exception handling and file I/O.
-                            Practiced mini console apps to build fundamentals.
-                        </p>
-                        <div class="timeline-tech">
-                            <span class="tech-badge">Java</span>
-                            <span class="tech-badge">OOP</span>
-                            <span class="tech-badge">Collections</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3 class="timeline-title">Web & Backend Foundations</h3>
-                            <span class="timeline-company">Self-Learning</span>
-                            <span class="timeline-period">2023 - 2024</span>
-                        </div>
-                        <p class="timeline-description">
-                            Learned HTML, CSS, JavaScript fundamentals and started Java backend with
-                            JDBC, Servlets/JSP and SQL. Built small CRUD apps.
-                        </p>
-                        <div class="timeline-tech">
-                            <span class="tech-badge">HTML/CSS/JS</span>
-                            <span class="tech-badge">JDBC</span>
-                            <span class="tech-badge">Servlets/JSP</span>
-                            <span class="tech-badge">MySQL</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3 class="timeline-title">Spring Boot & React</h3>
-                            <span class="timeline-company">Self-Learning / Projects</span>
-                            <span class="timeline-period">2024 - Present</span>
-                        </div>
-                        <p class="timeline-description">
-                            Building REST APIs with Spring Boot, learning JWT security, JPA/Hibernate,
-                            and exploring React for frontend. Creating practice projects to apply skills.
-                        </p>
-                        <div class="timeline-tech">
-                            <span class="tech-badge">Spring Boot</span>
-                            <span class="tech-badge">JPA/Hibernate</span>
-                            <span class="tech-badge">JWT</span>
-                            <span class="tech-badge">React</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
@@ -553,7 +478,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>Location</h3>
-                            <p>Mumbai, Maharashtra, India</p>
+                            <p>18.9902° N, 75.7529° E</p>
                         </div>
                     </div>
                 </div>
@@ -601,7 +526,7 @@
                 <div class="footer-section">
                     <h3>Connect</h3>
                     <div class="social-links">
-                        <a href="https://github.com/SUN17GH" target="_blank" class="social-link">
+                        <a href="https://github.com/SUN17G" target="_blank" class="social-link">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="https://linkedin.com/in/sunil-ghorpade" target="_blank" class="social-link">
@@ -614,7 +539,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Sunil Ghorpade. All rights reserved.</p>
+                <p>&copy; 2025 Sunil Ghorpade. All rights reserved.</p>
             </div>
         </div>
     </footer>
