CLEAR SOME ERRORS

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                                 <span>Java</span>
                             </div>
                             <div class="tech-item">
-                                <i class="fab fa-Html"></i>
+                                <i class="fab fa-html5"></i>
                                 <span>Html</span>
                             </div>
                             <div class="tech-item">
-                                <i class="fab fa-Css"></i>
+                                <i class="fab fa-css3-alt"></i>
                                 <span>Css</span>
                             </div>
                         </div>
@@ -526,7 +526,7 @@
                 <div class="footer-section">
                     <h3>Connect</h3>
                     <div class="social-links">
-                        <a href="https://github.com/SUN17G" target="_blank" class="social-link">
+                        <a href="https://github.com/SUN17GH" target="_blank" class="social-link">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="https://linkedin.com/in/sunil-ghorpade" target="_blank" class="social-link">
